initial setup of service, doesn't build