@@ -1,33 +1,33 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.9/userguide/java_library_plugin.html
- */
 
 plugins {
-    // Apply the java-library plugin to add support for Java Library
     id 'java-library'
 }
 
 version = '1.0.0-SNAPSHOT'
-group = 'com.fiserv.ccs.deathvalley'
+group = 'org.m410.deathvalley'
 
-dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+sourceCompatibility = 10
+defaultTasks 'build'
+description 'Death Valley'
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:23.0'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+repositories {
+    mavenCentral()
 }
 
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+dependencies {
+    compile('org.apache.commons:commons-lang3:3.7')
+    compile('javax.validation:validation-api:2.0.1.Final')
+
+    testCompile('javax.annotation:javax.annotation-api:1.3.2')
+    testCompile('org.hibernate.common:hibernate-commons-annotations:5.0.4.Final')
+    testCompile('org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final')
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+}
+
+test {
+    jvmArgs '--illegal-access=deny'
+    useJUnitPlatform {
+        excludeEngines 'junit-vintage'
+    }
 }
